--- a/src/mrobot_vio/CMakeLists.txt
+++ b/src/mrobot_vio/CMakeLists.txt
@@ -6,9 +6,43 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 endif()
 
 find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(cv_bridge REQUIRED)
+find_package(OpenCV REQUIRED)
+find_package(Eigen3 REQUIRED)
+
+include_directories(include)
+include_directories(${EIGEN3_INCLUDE_DIR})
+
+include_directories(${OpenCV_INCLUDE_DIRS})
+link_directories(${OpenCV_LIBRARY_DIRS})
+add_definitions(${OpenCV_DEFINITIONS})
+
+add_executable(
+  feature_tracker 
+  src/feature_tracker/feature_tracker.cpp
+  src/feature_tracker/feature_tracker_node.cpp
+  src/camera_model/pinhole_camera.cpp
+)
+ament_target_dependencies(
+  feature_tracker
+  rclcpp sensor_msgs cv_bridge OpenCV ${Eigen_LIBRARIES}
+)
 
 install(
-  DIRECTORY launch
+  DIRECTORY include
+  DESTINATION include
+)
+
+install(
+  TARGETS
+  feature_tracker
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+install(
+  DIRECTORY launch src
   DESTINATION share/${PROJECT_NAME}
 )
 
