--- a/src/mrobot_charging/CMakeLists.txt
+++ b/src/mrobot_charging/CMakeLists.txt
@@ -12,7 +12,17 @@ find_package(behaviortree_cpp REQUIRED)
 find_package(rclcpp_action REQUIRED)
 find_package(nav2_msgs REQUIRED)
 find_package(tf2 REQUIRED)
+find_package(tf2_ros REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+
+include_directories(${OpenCV_INCLUDE_DIRS})
+link_directories(${OpenCV_LIBRARY_DIRS})
+add_definitions(${OpenCV_DEFINITIONS})
+
+find_package(OpenCV REQUIRED)
+find_package(cv_bridge REQUIRED)
+
 
 include_directories(include)
 
@@ -23,7 +33,7 @@ add_executable(
 )
 ament_target_dependencies(
   bt_ros_node
-  rclcpp behaviortree_cpp rclcpp_action nav2_msgs tf2 tf2_geometry_msgs
+  rclcpp behaviortree_cpp rclcpp_action nav2_msgs tf2 tf2_ros OpenCV cv_bridge geometry_msgs tf2_geometry_msgs
 )
 
 install(
