--- a/src/mrobot_charging/package.xml
+++ b/src/mrobot_charging/package.xml
@@ -13,6 +13,11 @@
   <depend>rclcpp_action</depend>
   <depend>nav2_msgs</depend>
   <depend>behaviortree_cpp</depend>
+  <depend>cv_bridge</depend>
+  <depend>libopencv-dev</depend>
+  <depend>tf2</depend>  
+  <depend>tf2_ros</depend>
+  <depend>geometry_msgs</depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
