--- a/src/mrobot_controller/config/mrobot_controllers.yaml
+++ b/src/mrobot_controller/config/mrobot_controllers.yaml
@@ -10,14 +10,14 @@ mrobot_controller:
   ros__parameters:
     type: diff_drive_controller/DiffDriveController
     use_stamped_vel: true
-    left_wheel_names: ['drivewhl_l_joint']
-    right_wheel_names: ['drivewhl_r_joint']
+    left_wheel_names: ['left_wheel_joint']
+    right_wheel_names: ['right_wheel_joint']
     publish_rate: 50.0
     pose_covariance_diagonal: [0.001, 0.001, 1.0e-3, 1.0e-3, 1.0e-3, 0.01]
     twist_covariance_diagonal: [0.001, 0.001, 1.0e-3, 1.0e-3, 1.0e-3, 0.01]
 
-    wheel_radius: 0.14
-    wheel_separation: 0.52
+    wheel_radius: 0.075
+    wheel_separation: 0.4204
     left_wheel_radius_multiplier: 1.0
     right_wheel_radius_multiplier: 1.0
     wheel_separation_multiplier: 1.0
