--- a/src/mrobot_charging/package.xml
+++ b/src/mrobot_charging/package.xml
@@ -18,6 +18,9 @@
   <depend>tf2</depend>  
   <depend>tf2_ros</depend>
   <depend>geometry_msgs</depend>
+  <depend>nav_msgs</depend>
+  <depend>sensor_msgs</depend>
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
 
